# auto-train

./: LICENSE  README.md  pyproject.toml
src/autotorchtrain/loggers/: display.py  tensorboard.py
src/torchcoach/loggers/: display.py  tensorboard.py
tests/: test_auto_train.py
