[tool.poetry]
name = "auto-train"
version = "0.1.0"
description = "A project aiming at simplifying training of PyTorch models and provide support for the continual learning setting."
authors = ["Reza Davari <rezazzr@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
