[tool.poetry]
name = "torchcoach"
version = "0.1.0"
description = "A project aiming at simplifying training of PyTorch models and provide support for the continual learning setting."
authors = ["Reza Davari <rezazzr@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
numpy = "^1.22.3"
black = "^22.3.0"
aiohttp = "^3.8.1"
aiohttp_cors = "^0.7.0"
prettytable = "^3.2.0"
tensorboard = "^2.8.0"
jupyter = "^1.0.0"
pandas = "^1.4.2"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
